--- a/misc/planering.html
+++ b/misc/planering.html
@@ -26,6 +26,7 @@
     <!-- Skriv ned svaren på frågorna från INPUT-reflektion här -->
 
     <h2>1. Idébeskrivning</h2>
+    Min tanke är att göra en hemsida för en snabbmatsresturang baserad på västerländsk matkultur.
     <!-- Vad ska du göra? Vilken är din målgrupp? Om du utvecklar en tidigare sida; Vad ska du förändra/utveckla? -->
 
     <h2>2. Planering</h2>
@@ -45,9 +46,11 @@
             <td>4</td>
             <td>
             <!-- Vad görs på lektionen vecka 4? -->
+            var inte närvarande
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 4? -->
+            var inte medveten om uppgiften vilket är mitt fel givetvis
             </td>
         </tr>
 
@@ -55,9 +58,11 @@
             <td>5</td>
             <td>
             <!-- Vad görs på lektionen vecka 5? -->
+            Kommer på ide och börjar med att skapa ett gridsystem för första sidan
             </td>
             <td>
             <!-- Vad görs utanför lektionen vecka 5? -->
+            Behöver verkligen få en bättre koll på html/css. Kolla igenom grunderna samt tidigare projekt.
             </td>
         </tr>
 
