--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Western Foods</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="Western foods"
 
+    <header class="header"><h5>Western Foods</h5></header>
+    <section class="rutor">
+        <div class="bild"><h5>bild</h5></div>
+        <div class="bild"><h5>bild</h5></div>
+        <div class="bild"><h5>bild</h5></div>
+        <div class="bild"><h5>bild</h5></div>
+    </section>
+    <aside class="aside"><h5>aside</h5></aside>
+    <footer class="footer"><h5>footer</h5></footer>
+
+</div>
+
+
+
+    
+</body>
+</html>
