Kommit igång lite

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="Western foods"
+    <div class="Westernfoods">
 
-    <header class="header"><h5>Western Foods</h5></header>
-    <section class="rutor">
-        <div class="bild"><h5>bild</h5></div>
-        <div class="bild"><h5>bild</h5></div>
-        <div class="bild"><h5>bild</h5></div>
-        <div class="bild"><h5>bild</h5></div>
-    </section>
+  <header id="header">
+    <div class="logga"></div>
+    <a href="sida2.html"></a>
+
+
+  </header>
+  <article class="article"></article>
     <aside class="aside"><h5>aside</h5></aside>
     <footer class="footer"><h5>footer</h5></footer>
 
