--- a/index.html
+++ b/index.html
@@ -3,25 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Western Foods</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Western Foods | Welcome </title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-<body>
-    <div class="Westernfoods">
-
-  <header id="header">
-    <div class="logga"></div>
-    <a href="sida2.html"></a>
-
-
-  </header>
-  <article class="article"></article>
-    <aside class="aside"><h5>aside</h5></aside>
-    <footer class="footer"><h5>footer</h5></footer>
-
+<body> 
+<header>
+<div class="container">
+<div id="logga">
+  <h1>Western Foods</h1>
 </div>
+<nav>
+  <ul>
+    <li><a href="index.html">Start</a></li>
+    <li><a href="sida2.html">Meny</a></li>
+    <li><a href="sida3.html">om oss</a></li>
+  </ul>
+</nav>
+</div>
+</header>
 
+<section id="FörstaBilden">
+  <div class="container">
+    <h1>Bästa av det Västerländska Köket</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id dignissim dui, non rhoncus magna. Donec diam justo, condimentum quis mauris ac, placerat </p>
+  </div>
+</section>
 
+<section id="HittaResturang">
+  <div class="container">
+    <h1>Hitta en Resturang nära dig</h1>
+    <form>
+      <input type="search" placeholder="Stad...">
+      <button type="menu" class="SökKnapp">SÖK</button>
+    </form>
+  </div>
+</section>
+
+<section id="boxes">
+  <div class="container">
+    <div class="box">
+
+      <img src="/img/Pasta.jpg"> 
+      
+      <h3>Bästa Kvaliten</h3>
+      <p>Vi på Western Foods...</p>
+    </div>
+    <div class="box">
+      <img src="img/">
+      <h3>Sedan 1974</h3>
+      <p>Vår första resturang Lanserades av Björn Eriksson på Östermalm i Stockholm </p>
+    </div>
+    <div class="box">
+      <img src="img/">
+      <h3>2st Michelin Stjärnor</h3>
+      <p>Vi är ytterst stolta att ha blivit prisade med 2st Michelin Stjärnor</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <p>Western Foods AB Copyright &copy; 2020</p>
+</footer>
 
     
 </body>
