--- a/sida2.html
+++ b/sida2.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Western Foods | Meny</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+    <div class="container">
+        <div id="logga">
+          <h1>Western Foods</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Start</a></li>
+            <li><a href="sida2.html">Meny</a></li>
+            <li><a href="sida3.html">om oss</a></li>
+          </ul>
+        </nav>
+        </div>
+        </header>
+
+        <section id="meny">
+            <div class="container">
+                
+            </div>
+        </section>
 </body>
 </html>
