--- a/sida3.html
+++ b/sida3.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Western Foods | Om Oss</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-    
+
+    <header>
+        <div class="container">
+        <div id="logga">
+          <h1>Western Foods</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Start</a></li>
+            <li><a href="sida2.html">Meny</a></li>
+            <li><a href="sida3.html">om oss</a></li>
+          </ul>
+        </nav>
+        </div>
+        </header>
+        
+
+
+
+
+
+    <div class="container">
+        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2132.5267852234865!2d11.97259191573422!3d57.690519548357585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff30cb0e6c031%3A0x512e1a3cb4192a9!2sNTI%20Gymnasiet%20Johanneberg!5e0!3m2!1ssv!2sse!4v1608243823929!5m2!1ssv!2sse" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></p>
+    </div>
 </body>
 </html>
